--- a/apps/blog/templates/blog/write.html
+++ b/apps/blog/templates/blog/write.html
@@ -4,17 +4,9 @@
     {% csrf_token %}
     <fieldset>
         <legend>Your post</legend>
-        {% for field in form %}
-            <div class="form-group">
-                <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-                {{ my_field }} {{ field.errors }}
-                <div class="col-lg-10">
-                    {{field}}
-                </div>
-            </div>
-        {% endfor %}
+        {{ form.as_p }}
         <div class="form-group">
-          <div class="col-lg-10 col-lg-offset-2">
+            <div>
                 <button type="reset" class="btn btn-default">Cancel</button>
                 <button type="submit" class="btn btn-primary">Publish</button>
             </div>
